--- a/InnotekDemo02/src/main/resources/application.properties
+++ b/InnotekDemo02/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jackson.serialization.indent-output=true
 mybatis.type-aliases-package=com.innotek.innotekdemo02.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
+
+logging.level.com.innotek.innotekdemo02.dao=debug
+
