--- a/InnotekDemo02/src/main/resources/application.properties
+++ b/InnotekDemo02/src/main/resources/application.properties
@@ -15,5 +15,6 @@ mybatis.type-aliases-package=com.innotek.innotekdemo02.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 
+# 配置dao包的日志级别
 logging.level.com.innotek.innotekdemo02.dao=debug
 
